fix icon and add crud generator from zzzul

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -76,3 +76,10 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+iconify-icon {
+    display: inline-block;
+    width: 1em;
+    height: 1.2em;
+}
