--- a/resources/css/dataTables.tailwind.css
+++ b/resources/css/dataTables.tailwind.css
@@ -19,7 +19,7 @@
 div.datatable div.dt-container div.dt-layout-row:nth-child(1) {
     display: flex;
     justify-content: space-between;
-    padding: 0.75rem;
+    margin: 1rem 0;
 }
 
 div.datatable div.dt-container div.dt-layout-row:nth-last-of-type(1) {
@@ -64,7 +64,77 @@ div.datatable div.dt-container div.dt-layout-row.dt-layout-table {
     border-radius: 0.55rem;
     position: relative;
 }
+div.datatable div.dt-length {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+}
 
+div.datatable div.dt-length > select:focus-visible {
+    --tw-ring-offset-width: 2px;
+    --tw-ring-color: hsl(var(--ring));
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+
+div.datatable div.dt-length > select {
+    display: flex;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 2rem;
+    border-radius: calc(var(--radius) - 2px);
+    border-width: 1px;
+    width: 100%;
+    height: 2.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    border-color: hsl(var(--input));
+    background-color: hsl(var(--background));
+}
+
+div.datatable div.dt-length > label {
+    flex: 1 1 auto;
+    white-space: nowrap;
+}
+
+div.datatable div.dt-search {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+}
+
+div.datatable div.dt-search input[type="search"]:focus-visible {
+    --tw-ring-offset-width: 2px;
+    --tw-ring-color: hsl(var(--ring));
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+    outline: 2px solid transparent;
+    outline-offset: 2px;
+}
+div.datatable div.dt-search input[type="search"] {
+    display: flex;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 0.75rem;
+    padding-right: 0.75rem;
+    border-radius: calc(var(--radius) - 2px);
+    border-width: 1px;
+    width: 100%;
+    height: 2.5rem;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+    border-color: hsl(var(--input));
+    background-color: hsl(var(--background));
+}
 
 table.dataTable td.dt-control {
   text-align: center;
@@ -88,15 +158,6 @@ table.dataTable tbody tr td {
 
 table.dataTable tbody tr:nth-last-of-type(1) td {
     border-bottom: none;
-}
-
-
-table.dataTable colgroup {
-    /* border: none; */
-}
-
-table.dataTable thead {
-    /* border: none; */
 }
 
 table.dataTable td.dt-control:before {
