--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,6 +45,8 @@
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
+  --collapsible-down: collapsible-down 0.3s ease-in-out;
+  --collapsible-up: collapsible-up 0.3s ease-in-out;
 
   @keyframes accordion-down {
     from {
@@ -60,6 +62,24 @@
     }
     to {
       height: 0;
+    }
+  }
+
+  @keyframes collapsible-down {
+    from {
+        height: 0
+    }
+    to {
+        height: var(--radix-collapsible-content-height)
+    }
+  }
+
+  @keyframes collapsible-up {
+    from {
+        height: var(--radix-collapsible-content-height)
+    }
+    to {
+        height: 0
     }
   }
 }
