--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -45,8 +45,8 @@
 
   --animate-accordion-down: accordion-down 0.2s ease-out;
   --animate-accordion-up: accordion-up 0.2s ease-out;
-  --collapsible-down: collapsible-down 0.3s ease-in-out;
-  --collapsible-up: collapsible-up 0.3s ease-in-out;
+  --animate-collapsible-down: collapsible-down 0.3s ease-in-out;
+  --animate-collapsible-up: collapsible-up 0.3s ease-in-out;
 
   @keyframes accordion-down {
     from {
